Fix institutional search box options (#1635)
- Fixed institutional search options not showing up in BS2 theme, and
advanced search options not auto-expanding on the browse page when using
the showAdvanced url parameter.
- Changed the search box to have global search as the default option
- Fixed institutional search in arArchivesCanadaPlugin by moving the
quick links bar to be after the header in the template.
- Removed the search input area having the placeholder include the
repository name since this might be confusing as it doesn't update when
the user clicks an institutional search option radio button.

--- a/plugins/arArchivesCanadaPlugin/css/less/header.less
+++ b/plugins/arArchivesCanadaPlugin/css/less/header.less
@@ -251,6 +251,10 @@
   }
 }
 
+.header-bar {
+  display: flex;
+  flex-direction: column-reverse;
+}
 @media (max-width: 530px) {
   #header-search #search-form-wrapper {
     width: 75%;
